--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "language-lua",
-  "version": "0.9.11",
+  "name": "language-kevin",
+  "version": "0.1.0",
   "private": false,
-  "author": "FireZenk <firezenk@gmail.com>",
-  "description": "Add syntax highlighting and snippets to Lua files in Atom",
-  "repository": "https://github.com/FireZenk/language-lua",
+  "author": "Brandon Dyer <brandondyer64@gmail.com>",
+  "description": "Add syntax highlighting and snippets to Kevin files in Atom",
+  "repository": "https://github.com/BrandonDyer64/language-kevin",
   "license": "MIT",
   "engines": {
     "atom": ">=0.50.0"
